--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,20 @@
             </div>
           </div>
 
-          <div id="table"></div>
+          <div id="table">
+            <div class="loadingio-spinner-spin-g6050w4ymch">
+              <div class="ldio-msod7n1f0ms">
+                <div><div></div></div>
+                <div><div></div></div>
+                <div><div></div></div>
+                <div><div></div></div>
+                <div><div></div></div>
+                <div><div></div></div>
+                <div><div></div></div>
+                <div><div></div></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
